deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-app  # Cambiado para que coincida con tu workflow
  labels:
    app: html-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-app
  template:
    metadata:
      labels:
        app: html-app
    spec:
      containers:
      - name: nginx  # Coincide con CONTAINER_NAME en el workflow
        image: liyo13/build-push-actions
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
