service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-app-service
spec:
  selector:
    app: html-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort  # Cambiado de ClusterIP a NodePort
